# evolutionary-mnist

./: .gitignore  README.md  config.py  data.py  main.py  model.py  prepare_data.py  pyproject.toml  results.py  search.py  training.py  visualization.py  visualize_training.py
evolution/: __init__.py  advisor.py  mini_grid.py  pareto.py
experiments/: evo-mini-v1.toml  evo-mini-v2.toml  evo-mini-v3.toml  sweep-v1.toml
experiments/evo-mini-v1/: llm_decisions.json  progress.json
experiments/evo-mini-v3/: config.json  llm_decisions.json  llm_reasoning.txt  progress.json  results.json  summary.txt
experiments/sweep-v1/: config.json  results.json  summary.txt
frontend/: __init__.py  app.py  history.py  live_monitor.py  llm_viewer.py  visualizations.py
llm/: __init__.py  openrouter_client.py
src/evolutionary_mnist/: __init__.py  __main__.py  charts.py  cli.py  config.py  model.py  results.py  search.py  training.py
src/evolutionary_mnist/evolution/: __init__.py  advisor.py
src/evolutionary_mnist/llm/: __init__.py  openrouter_client.py
